--- a/solution_test.template
+++ b/solution_test.template
@@ -2,7 +2,7 @@ package main
 
 import "testing"
 
-func Test_countIncreasingMeasurements(t *testing.T) {
+func Test_solution(t *testing.T) {
 
 	tests := []struct {
 		name  string
@@ -18,7 +18,7 @@ func Test_countIncreasingMeasurements(t *testing.T) {
 	for _, tt := range tests {
 		t.Run(tt.name, func(t *testing.T) {
 			if got := calculateSolution(tt.input); got != tt.want {
-				t.Errorf("countIncreasingMeasurements() = %v, want %v", got, tt.want)
+				t.Errorf("calculateSolution() = %v, want %v", got, tt.want)
 			}
 		})
 	}
